Fixed spacing

--- a/src/css/partner-profile-page.less
+++ b/src/css/partner-profile-page.less
@@ -62,7 +62,7 @@
             margin-bottom: 1em;
         }
         .example {
-            margin-bottom: 1.5em;
+            margin-bottom: 3em;
             h3 {
 
             }
